deploy/deployment_pg.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    run: postgres
  name: postgres
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/postgres
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      run: postgres
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: postgres
    spec:
      containers:
      - image: postgres:10.0
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            memory: "800Mi"
            cpu: "0.2"
          limits:
            memory: "1200Mi"
            cpu: "0.4"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
