deploy/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: http-server
  name: http-server
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    run: http-server
