deploy/pg_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: postgres
  name: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    run: http-server
