deploy/varnish_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: varnish-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: varnish-cache
